flapivor/tests/m1/hopix/parser/bad/65-sequence-1.hopix
val x = sing (); eat () drink (); song ()